# GDELT-LocalExtractorTool

./: README.md  ci.yml  config.py  pyproject.toml
.github/workflows/: ci.yml
DataExtractionTool/: GDELT_Extractor.py
DataExtractionTool/test/: test_spark_transforms.py
DataExtractionTool/test/test_data/: sample_gdelt_lookup.txt  sample_manual_lookup.csv
DataExtractionTool/utils/: __init__.py  downloader.py  file_handler.py  input_validation.py  logger_config.py  schema.py  spark_manager.py  spark_transforms.py
assets/: cameo_dictionary  cameo_dictionary:Zone.Identifier  extended_lookup.csv
